--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
+    "styled-components": "^5.3.5",
     "three": "^0.143.0"
   },
   "devDependencies": {
