--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
-  "name": "portifolio",
+  "name": "next-landing-vpn",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "export": "next build && next export"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
-    "react-router-dom": "^6.3.0",
-    "styled-components": "^5.3.5",
-    "three": "^0.143.0"
+    "@fullhuman/postcss-purgecss": "^3.0.0",
+    "autoprefixer": "^10.4.12",
+    "framer-motion": "6.0.0",
+    "next": "^12.3.1",
+    "postcss": "^8.4.17",
+    "postcss-import": "^13.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scroll": "^1.8.1",
+    "react-slick": "^0.27.13",
+    "slick-carousel": "^1.8.1",
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.0.1",
-    "vite": "^3.0.7"
+    "babel-plugin-inline-react-svg": "^1.1.2"
   }
 }
