--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-landing-vpn",
+  "name": "next-portifolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -23,6 +23,6 @@
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
-    "babel-plugin-inline-react-svg": "^1.1.2"
+    "babel-plugin-inline-react-svg": "^2.0.2"
   }
 }
